wx-core/include/generated/ffi_t.h

// CLASS: wxTextCtrl
wxClassInfo *wxTextCtrl_CLASSINFO();
void wxTextCtrl_OSXEnableNewLineReplacement(wxTextCtrl * self, bool enable);
wxTextCtrl *wxTextCtrl_new();
wxTextCtrl *wxTextCtrl_new1(wxWindow * parent, wxWindowID id, const wxString * value, const wxPoint * pos, const wxSize * size, long style, const wxValidator * validator, const wxString * name);
bool wxTextCtrl_Create(wxTextCtrl * self, wxWindow * parent, wxWindowID id, const wxString * value, const wxPoint * pos, const wxSize * size, long style, const wxValidator * validator, const wxString * name);
void wxTextCtrl_DiscardEdits(wxTextCtrl * self);
void wxTextCtrl_EmptyUndoBuffer(wxTextCtrl * self);
bool wxTextCtrl_EmulateKeyPress(wxTextCtrl * self, const wxKeyEvent * event);
bool wxTextCtrl_EnableProofCheck(wxTextCtrl * self, const wxTextProofOptions * options);
wxTextAttr *wxTextCtrl_GetDefaultStyle(const wxTextCtrl * self);
int wxTextCtrl_GetLineLength(const wxTextCtrl * self, long line_no);
wxString *wxTextCtrl_GetLineText(const wxTextCtrl * self, long line_no);
int wxTextCtrl_GetNumberOfLines(const wxTextCtrl * self);
bool wxTextCtrl_GetStyle(wxTextCtrl * self, long position, wxTextAttr * style);
bool wxTextCtrl_IsModified(const wxTextCtrl * self);
bool wxTextCtrl_IsMultiLine(const wxTextCtrl * self);
bool wxTextCtrl_IsSingleLine(const wxTextCtrl * self);
bool wxTextCtrl_LoadFile(wxTextCtrl * self, const wxString * filename, int file_type);
void wxTextCtrl_MarkDirty(wxTextCtrl * self);
void wxTextCtrl_OnDropFiles(wxTextCtrl * self, wxDropFilesEvent * event);
bool wxTextCtrl_PositionToXY(const wxTextCtrl * self, long pos, long * x, long * y);
wxPoint *wxTextCtrl_PositionToCoords(const wxTextCtrl * self, long pos);
bool wxTextCtrl_SaveFile(wxTextCtrl * self, const wxString * filename, int file_type);
bool wxTextCtrl_SetDefaultStyle(wxTextCtrl * self, const wxTextAttr * style);
void wxTextCtrl_SetModified(wxTextCtrl * self, bool modified);
bool wxTextCtrl_SetStyle(wxTextCtrl * self, long start, long end, const wxTextAttr * style);
void wxTextCtrl_ShowPosition(wxTextCtrl * self, long pos);
long wxTextCtrl_XYToPosition(const wxTextCtrl * self, long x, long y);
// Mix-in(s) to wxTextCtrl
wxTextEntryBase *wxTextCtrl_AsTextEntry(wxTextCtrl* obj);
// CLASS: wxTextDataObject
void wxTextDataObject_delete(wxTextDataObject *self);
wxTextDataObject *wxTextDataObject_new(const wxString * text);
wxString *wxTextDataObject_GetText(const wxTextDataObject * self);
size_t wxTextDataObject_GetTextLength(const wxTextDataObject * self);
void wxTextDataObject_SetText(wxTextDataObject * self, const wxString * str_text);
// CLASS: wxTextDropTarget
void wxTextDropTarget_delete(wxTextDropTarget *self);
bool wxTextDropTarget_OnDropText(wxTextDropTarget * self, wxCoord x, wxCoord y, const wxString * data);
// CLASS: wxTextEntry
void wxTextEntry_delete(wxTextEntry *self);
void wxTextEntry_AppendText(wxTextEntry * self, const wxString * text);
bool wxTextEntry_AutoComplete(wxTextEntry * self, const wxArrayString * choices);
bool wxTextEntry_AutoComplete1(wxTextEntry * self, wxTextCompleter * completer);
bool wxTextEntry_AutoCompleteFileNames(wxTextEntry * self);
bool wxTextEntry_AutoCompleteDirectories(wxTextEntry * self);
bool wxTextEntry_CanCopy(const wxTextEntry * self);
bool wxTextEntry_CanCut(const wxTextEntry * self);
bool wxTextEntry_CanPaste(const wxTextEntry * self);
bool wxTextEntry_CanRedo(const wxTextEntry * self);
bool wxTextEntry_CanUndo(const wxTextEntry * self);
void wxTextEntry_ChangeValue(wxTextEntry * self, const wxString * value);
void wxTextEntry_Clear(wxTextEntry * self);
void wxTextEntry_Copy(wxTextEntry * self);
void wxTextEntry_Cut(wxTextEntry * self);
void wxTextEntry_ForceUpper(wxTextEntry * self);
long wxTextEntry_GetInsertionPoint(const wxTextEntry * self);
wxString *wxTextEntry_GetRange(const wxTextEntry * self, long from, long to);
void wxTextEntry_GetSelection(const wxTextEntry * self, long * from, long * to);
wxString *wxTextEntry_GetStringSelection(const wxTextEntry * self);
wxString *wxTextEntry_GetValue(const wxTextEntry * self);
bool wxTextEntry_IsEditable(const wxTextEntry * self);
bool wxTextEntry_IsEmpty(const wxTextEntry * self);
void wxTextEntry_Paste(wxTextEntry * self);
void wxTextEntry_Redo(wxTextEntry * self);
void wxTextEntry_Remove(wxTextEntry * self, long from, long to);
void wxTextEntry_Replace(wxTextEntry * self, long from, long to, const wxString * value);
void wxTextEntry_SetEditable(wxTextEntry * self, bool editable);
void wxTextEntry_SetInsertionPoint(wxTextEntry * self, long pos);
void wxTextEntry_SetInsertionPointEnd(wxTextEntry * self);
void wxTextEntry_SetSelection(wxTextEntry * self, long from, long to);
void wxTextEntry_SelectAll(wxTextEntry * self);
void wxTextEntry_SelectNone(wxTextEntry * self);
bool wxTextEntry_SetHint(wxTextEntry * self, const wxString * hint);
wxString *wxTextEntry_GetHint(const wxTextEntry * self);
bool wxTextEntry_SetMargins(wxTextEntry * self, const wxPoint * pt);
bool wxTextEntry_SetMargins1(wxTextEntry * self, wxCoord left, wxCoord top);
wxPoint *wxTextEntry_GetMargins(const wxTextEntry * self);
void wxTextEntry_SetValue(wxTextEntry * self, const wxString * value);
void wxTextEntry_Undo(wxTextEntry * self);
void wxTextEntry_WriteText(wxTextEntry * self, const wxString * text);
// CLASS: wxTextEntryDialog
wxClassInfo *wxTextEntryDialog_CLASSINFO();
wxTextEntryDialog *wxTextEntryDialog_new();
wxTextEntryDialog *wxTextEntryDialog_new1(wxWindow * parent, const wxString * message, const wxString * caption, const wxString * value, long style, const wxPoint * pos);
bool wxTextEntryDialog_Create(wxTextEntryDialog * self, wxWindow * parent, const wxString * message, const wxString * caption, const wxString * value, long style, const wxPoint * pos);
wxString *wxTextEntryDialog_GetValue(const wxTextEntryDialog * self);
void wxTextEntryDialog_SetTextValidator(wxTextEntryDialog * self, const wxTextValidator * validator);
void wxTextEntryDialog_SetValue(wxTextEntryDialog * self, const wxString * value);
void wxTextEntryDialog_ForceUpper(wxTextEntryDialog * self);
// CLASS: wxTextValidator
wxClassInfo *wxTextValidator_CLASSINFO();
wxTextValidator *wxTextValidator_new(const wxTextValidator * validator);
wxTextValidator *wxTextValidator_new1(long style, wxString * val_ptr);
wxString *wxTextValidator_GetCharExcludes(const wxTextValidator * self);
wxString *wxTextValidator_GetCharIncludes(const wxTextValidator * self);
wxArrayString *wxTextValidator_GetExcludes(const wxTextValidator * self);
wxArrayString *wxTextValidator_GetIncludes(const wxTextValidator * self);
long wxTextValidator_GetStyle(const wxTextValidator * self);
void wxTextValidator_OnChar(wxTextValidator * self, wxKeyEvent * event);
void wxTextValidator_SetExcludes(wxTextValidator * self, const wxArrayString * string_list);
void wxTextValidator_SetCharExcludes(wxTextValidator * self, const wxString * chars);
void wxTextValidator_SetIncludes(wxTextValidator * self, const wxArrayString * string_list);
void wxTextValidator_SetCharIncludes(wxTextValidator * self, const wxString * chars);
void wxTextValidator_AddExclude(wxTextValidator * self, const wxString * exclude);
void wxTextValidator_AddInclude(wxTextValidator * self, const wxString * include);
void wxTextValidator_AddCharExcludes(wxTextValidator * self, const wxString * chars);
void wxTextValidator_AddCharIncludes(wxTextValidator * self, const wxString * chars);
void wxTextValidator_SetStyle(wxTextValidator * self, long style);
wxString *wxTextValidator_IsValid(const wxTextValidator * self, const wxString * val);
// CLASS: wxThreadEvent
wxClassInfo *wxThreadEvent_CLASSINFO();
long wxThreadEvent_GetExtraLong(const wxThreadEvent * self);
int wxThreadEvent_GetInt(const wxThreadEvent * self);
wxString *wxThreadEvent_GetString(const wxThreadEvent * self);
void wxThreadEvent_SetExtraLong(wxThreadEvent * self, long extra_long);
void wxThreadEvent_SetInt(wxThreadEvent * self, int int_command);
void wxThreadEvent_SetString(wxThreadEvent * self, const wxString * string);