wx-core/src/generated/ffi_t.rs


    // wxTextCtrl
    pub fn wxTextCtrl_CLASSINFO() -> *mut c_void;
    pub fn wxTextCtrl_OSXEnableNewLineReplacement(self_: *mut c_void, enable: bool);
    // BLOCKED: pub fn wxTextCtrl_operator<<(self_: *mut c_void, s: *const c_void) -> *mut c_void;
    // BLOCKED: pub fn wxTextCtrl_operator<<1(self_: *mut c_void, i: c_int) -> *mut c_void;
    // BLOCKED: pub fn wxTextCtrl_operator<<2(self_: *mut c_void, i: c_long) -> *mut c_void;
    // NOT_SUPPORTED: pub fn wxTextCtrl_operator<<3(self_: *mut c_void, f: float) -> *mut c_void;
    // BLOCKED: pub fn wxTextCtrl_operator<<4(self_: *mut c_void, d: c_double) -> *mut c_void;
    // NOT_SUPPORTED: pub fn wxTextCtrl_operator<<5(self_: *mut c_void, c: char) -> *mut c_void;
    // NOT_SUPPORTED: pub fn wxTextCtrl_operator<<6(self_: *mut c_void, c: wchar_t) -> *mut c_void;
    pub fn wxTextCtrl_new() -> *mut c_void;
    pub fn wxTextCtrl_new1(
        parent: *mut c_void,
        id: c_int,
        value: *const c_void,
        pos: *const c_void,
        size: *const c_void,
        style: c_long,
        validator: *const c_void,
        name: *const c_void,
    ) -> *mut c_void;
    // DTOR: pub fn wxTextCtrl_~wxTextCtrl(self_: *mut c_void);
    pub fn wxTextCtrl_Create(
        self_: *mut c_void,
        parent: *mut c_void,
        id: c_int,
        value: *const c_void,
        pos: *const c_void,
        size: *const c_void,
        style: c_long,
        validator: *const c_void,
        name: *const c_void,
    ) -> bool;
    pub fn wxTextCtrl_DiscardEdits(self_: *mut c_void);
    pub fn wxTextCtrl_EmptyUndoBuffer(self_: *mut c_void);
    pub fn wxTextCtrl_EmulateKeyPress(self_: *mut c_void, event: *const c_void) -> bool;
    pub fn wxTextCtrl_EnableProofCheck(self_: *mut c_void, options: *const c_void) -> bool;
    pub fn wxTextCtrl_GetDefaultStyle(self_: *const c_void) -> *mut c_void;
    pub fn wxTextCtrl_GetLineLength(self_: *const c_void, line_no: c_long) -> c_int;
    pub fn wxTextCtrl_GetLineText(self_: *const c_void, line_no: c_long) -> *mut c_void;
    pub fn wxTextCtrl_GetNumberOfLines(self_: *const c_void) -> c_int;
    pub fn wxTextCtrl_GetStyle(self_: *mut c_void, position: c_long, style: *mut c_void) -> bool;
    // NOT_SUPPORTED: pub fn wxTextCtrl_HitTest(self_: *const c_void, pt: *const c_void, pos: *mut c_void) -> wxTextCtrlHitTestResult;
    // NOT_SUPPORTED: pub fn wxTextCtrl_HitTest1(self_: *const c_void, pt: *const c_void, col: *mut c_void, row: *mut c_void) -> wxTextCtrlHitTestResult;
    pub fn wxTextCtrl_IsModified(self_: *const c_void) -> bool;
    pub fn wxTextCtrl_IsMultiLine(self_: *const c_void) -> bool;
    pub fn wxTextCtrl_IsSingleLine(self_: *const c_void) -> bool;
    // NOT_SUPPORTED: pub fn wxTextCtrl_GetProofCheckOptions(self_: *mut c_void) -> wxTextProofOptions;
    pub fn wxTextCtrl_LoadFile(
        self_: *mut c_void,
        filename: *const c_void,
        file_type: c_int,
    ) -> bool;
    pub fn wxTextCtrl_MarkDirty(self_: *mut c_void);
    pub fn wxTextCtrl_OnDropFiles(self_: *mut c_void, event: *mut c_void);
    pub fn wxTextCtrl_PositionToXY(
        self_: *const c_void,
        pos: c_long,
        x: *mut c_void,
        y: *mut c_void,
    ) -> bool;
    pub fn wxTextCtrl_PositionToCoords(self_: *const c_void, pos: c_long) -> *mut c_void;
    pub fn wxTextCtrl_SaveFile(
        self_: *mut c_void,
        filename: *const c_void,
        file_type: c_int,
    ) -> bool;
    pub fn wxTextCtrl_SetDefaultStyle(self_: *mut c_void, style: *const c_void) -> bool;
    pub fn wxTextCtrl_SetModified(self_: *mut c_void, modified: bool);
    pub fn wxTextCtrl_SetStyle(
        self_: *mut c_void,
        start: c_long,
        end: c_long,
        style: *const c_void,
    ) -> bool;
    pub fn wxTextCtrl_ShowPosition(self_: *mut c_void, pos: c_long);
    pub fn wxTextCtrl_XYToPosition(self_: *const c_void, x: c_long, y: c_long) -> c_long;
    // Mix-in(s) to wxTextCtrl
    pub fn wxTextCtrl_AsTextEntry(obj: *mut c_void) -> *mut c_void;

    // wxTextDataObject
    pub fn wxTextDataObject_delete(self_: *mut c_void);
    pub fn wxTextDataObject_new(text: *const c_void) -> *mut c_void;
    pub fn wxTextDataObject_GetText(self_: *const c_void) -> *mut c_void;
    pub fn wxTextDataObject_GetTextLength(self_: *const c_void) -> usize;
    // BLOCKED: pub fn wxTextDataObject_GetFormat(self_: *const c_void) -> *mut c_void;
    pub fn wxTextDataObject_SetText(self_: *mut c_void, str_text: *const c_void);

    // wxTextDropTarget
    pub fn wxTextDropTarget_delete(self_: *mut c_void);
    // BLOCKED: pub fn wxTextDropTarget_new() -> *mut c_void;
    pub fn wxTextDropTarget_OnDropText(
        self_: *mut c_void,
        x: c_int,
        y: c_int,
        data: *const c_void,
    ) -> bool;

    // wxTextEntry
    pub fn wxTextEntry_delete(self_: *mut c_void);
    pub fn wxTextEntry_AppendText(self_: *mut c_void, text: *const c_void);
    pub fn wxTextEntry_AutoComplete(self_: *mut c_void, choices: *const c_void) -> bool;
    pub fn wxTextEntry_AutoComplete1(self_: *mut c_void, completer: *mut c_void) -> bool;
    pub fn wxTextEntry_AutoCompleteFileNames(self_: *mut c_void) -> bool;
    pub fn wxTextEntry_AutoCompleteDirectories(self_: *mut c_void) -> bool;
    pub fn wxTextEntry_CanCopy(self_: *const c_void) -> bool;
    pub fn wxTextEntry_CanCut(self_: *const c_void) -> bool;
    pub fn wxTextEntry_CanPaste(self_: *const c_void) -> bool;
    pub fn wxTextEntry_CanRedo(self_: *const c_void) -> bool;
    pub fn wxTextEntry_CanUndo(self_: *const c_void) -> bool;
    pub fn wxTextEntry_ChangeValue(self_: *mut c_void, value: *const c_void);
    pub fn wxTextEntry_Clear(self_: *mut c_void);
    pub fn wxTextEntry_Copy(self_: *mut c_void);
    pub fn wxTextEntry_Cut(self_: *mut c_void);
    pub fn wxTextEntry_ForceUpper(self_: *mut c_void);
    pub fn wxTextEntry_GetInsertionPoint(self_: *const c_void) -> c_long;
    // NOT_SUPPORTED: pub fn wxTextEntry_GetLastPosition(self_: *const c_void) -> wxTextPos;
    pub fn wxTextEntry_GetRange(self_: *const c_void, from: c_long, to: c_long) -> *mut c_void;
    pub fn wxTextEntry_GetSelection(self_: *const c_void, from: *mut c_void, to: *mut c_void);
    pub fn wxTextEntry_GetStringSelection(self_: *const c_void) -> *mut c_void;
    pub fn wxTextEntry_GetValue(self_: *const c_void) -> *mut c_void;
    pub fn wxTextEntry_IsEditable(self_: *const c_void) -> bool;
    pub fn wxTextEntry_IsEmpty(self_: *const c_void) -> bool;
    pub fn wxTextEntry_Paste(self_: *mut c_void);
    pub fn wxTextEntry_Redo(self_: *mut c_void);
    pub fn wxTextEntry_Remove(self_: *mut c_void, from: c_long, to: c_long);
    pub fn wxTextEntry_Replace(self_: *mut c_void, from: c_long, to: c_long, value: *const c_void);
    pub fn wxTextEntry_SetEditable(self_: *mut c_void, editable: bool);
    pub fn wxTextEntry_SetInsertionPoint(self_: *mut c_void, pos: c_long);
    pub fn wxTextEntry_SetInsertionPointEnd(self_: *mut c_void);
    // NOT_SUPPORTED: pub fn wxTextEntry_SetMaxLength(self_: *mut c_void, len: unsigned long);
    pub fn wxTextEntry_SetSelection(self_: *mut c_void, from: c_long, to: c_long);
    pub fn wxTextEntry_SelectAll(self_: *mut c_void);
    pub fn wxTextEntry_SelectNone(self_: *mut c_void);
    pub fn wxTextEntry_SetHint(self_: *mut c_void, hint: *const c_void) -> bool;
    pub fn wxTextEntry_GetHint(self_: *const c_void) -> *mut c_void;
    pub fn wxTextEntry_SetMargins(self_: *mut c_void, pt: *const c_void) -> bool;
    pub fn wxTextEntry_SetMargins1(self_: *mut c_void, left: c_int, top: c_int) -> bool;
    pub fn wxTextEntry_GetMargins(self_: *const c_void) -> *mut c_void;
    pub fn wxTextEntry_SetValue(self_: *mut c_void, value: *const c_void);
    pub fn wxTextEntry_Undo(self_: *mut c_void);
    pub fn wxTextEntry_WriteText(self_: *mut c_void, text: *const c_void);

    // wxTextEntryDialog
    pub fn wxTextEntryDialog_CLASSINFO() -> *mut c_void;
    pub fn wxTextEntryDialog_new() -> *mut c_void;
    pub fn wxTextEntryDialog_new1(
        parent: *mut c_void,
        message: *const c_void,
        caption: *const c_void,
        value: *const c_void,
        style: c_long,
        pos: *const c_void,
    ) -> *mut c_void;
    pub fn wxTextEntryDialog_Create(
        self_: *mut c_void,
        parent: *mut c_void,
        message: *const c_void,
        caption: *const c_void,
        value: *const c_void,
        style: c_long,
        pos: *const c_void,
    ) -> bool;
    // DTOR: pub fn wxTextEntryDialog_~wxTextEntryDialog(self_: *mut c_void);
    pub fn wxTextEntryDialog_GetValue(self_: *const c_void) -> *mut c_void;
    pub fn wxTextEntryDialog_SetTextValidator(self_: *mut c_void, validator: *const c_void);
    // NOT_SUPPORTED: pub fn wxTextEntryDialog_SetTextValidator1(self_: *mut c_void, style: wxTextValidatorStyle);
    // NOT_SUPPORTED: pub fn wxTextEntryDialog_SetMaxLength(self_: *mut c_void, len: unsigned long);
    pub fn wxTextEntryDialog_SetValue(self_: *mut c_void, value: *const c_void);
    pub fn wxTextEntryDialog_ForceUpper(self_: *mut c_void);

    // wxTextValidator
    pub fn wxTextValidator_CLASSINFO() -> *mut c_void;
    pub fn wxTextValidator_new(validator: *const c_void) -> *mut c_void;
    pub fn wxTextValidator_new1(style: c_long, val_ptr: *mut c_void) -> *mut c_void;
    pub fn wxTextValidator_GetCharExcludes(self_: *const c_void) -> *mut c_void;
    pub fn wxTextValidator_GetCharIncludes(self_: *const c_void) -> *mut c_void;
    pub fn wxTextValidator_GetExcludes(self_: *const c_void) -> *mut c_void;
    pub fn wxTextValidator_GetIncludes(self_: *const c_void) -> *mut c_void;
    pub fn wxTextValidator_GetStyle(self_: *const c_void) -> c_long;
    // NOT_SUPPORTED: pub fn wxTextValidator_HasFlag(self_: *const c_void, style: wxTextValidatorStyle) -> bool;
    pub fn wxTextValidator_OnChar(self_: *mut c_void, event: *mut c_void);
    pub fn wxTextValidator_SetExcludes(self_: *mut c_void, string_list: *const c_void);
    pub fn wxTextValidator_SetCharExcludes(self_: *mut c_void, chars: *const c_void);
    pub fn wxTextValidator_SetIncludes(self_: *mut c_void, string_list: *const c_void);
    pub fn wxTextValidator_SetCharIncludes(self_: *mut c_void, chars: *const c_void);
    pub fn wxTextValidator_AddExclude(self_: *mut c_void, exclude: *const c_void);
    pub fn wxTextValidator_AddInclude(self_: *mut c_void, include: *const c_void);
    pub fn wxTextValidator_AddCharExcludes(self_: *mut c_void, chars: *const c_void);
    pub fn wxTextValidator_AddCharIncludes(self_: *mut c_void, chars: *const c_void);
    pub fn wxTextValidator_SetStyle(self_: *mut c_void, style: c_long);
    pub fn wxTextValidator_IsValid(self_: *const c_void, val: *const c_void) -> *mut c_void;

    // wxThreadEvent
    pub fn wxThreadEvent_CLASSINFO() -> *mut c_void;
    // NOT_SUPPORTED: pub fn wxThreadEvent_new(event_type: wxEventType, id: c_int) -> *mut c_void;
    // BLOCKED: pub fn wxThreadEvent_SetPayload(self_: *mut c_void, payload: *const c_void);
    // NOT_SUPPORTED: pub fn wxThreadEvent_GetPayload(self_: *const c_void) -> T;
    pub fn wxThreadEvent_GetExtraLong(self_: *const c_void) -> c_long;
    pub fn wxThreadEvent_GetInt(self_: *const c_void) -> c_int;
    pub fn wxThreadEvent_GetString(self_: *const c_void) -> *mut c_void;
    pub fn wxThreadEvent_SetExtraLong(self_: *mut c_void, extra_long: c_long);
    pub fn wxThreadEvent_SetInt(self_: *mut c_void, int_command: c_int);
    pub fn wxThreadEvent_SetString(self_: *mut c_void, string: *const c_void);
